2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* client.cpp:
	client window if highlighted when selected

	* classroom_manager.cpp:
	* classroom_manager.h:
	client window is zoomed when pressed on manager list

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.cpp:
	arrange order is based on classroom manager list

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/kmultitabbar.cpp:
	support for Qt 4.2
	
2008-03-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/vncview.cpp:
	fixed wrong calculation in mapToFramebuffer in case screen is scaled

2007-03-27	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ica/resources/it.ts:
	* ima/resources/it.ts:
	* lib/resources/it.ts:
	updated Italian localization

2008-03-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* setup/resources/pl.qm:
	* setup/resources/pl.ts:
	* ima/resources/pl.qm:
	* ima/resources/pl.ts:
	updated Polish localization-files by
	Robert Radko <robert/at/radko/dot/pl>

2008-03-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/remote_control_widget.cpp:
	* ima/src/tool_bar.h:
	* ima/src/italc_side_bar.cpp:
	* ima/src/tool_bar.cpp:
	* ima/src/tool_button.cpp:
	* ima/src/main_window.cpp:
	improved appearence of toolbar and tool-buttons

	* lib/include/vncview.h:
	* lib/src/vncview.cpp:
	in scaled view keep aspect ratio of screen and also do not expand
	image if vncView-size > framebuffer-size

2008-03-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/client.cpp:
	set user-name as tooltip if hostname is displayed in titlebar

	* ima/resources/sidebar.png:
	* ima/italc.qrc:
	* ima/src/italc_side_bar.h:
	* ima/src/side_bar_widget.cpp:
	* ima/src/italc_side_bar.cpp:
	improved appearence of left toolbar

	* ima/src/main_window.h:
	* ima/src/classroom_manager.h:
	* ima/src/main_window.cpp:
	* ima/src/classroom_manager.cpp: