@@ -1,6 +1,8 @@
 Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
 Maintainer and developer
 
+Andrei Krueger	<anc/at/iki/dot/fi>
+Developer
 
 Additional thanks to the authors of x11vnc and TightVNC.
 See ica/x11/README and ica/win32/README for details.
